[project]
name = "devops-ai-agent"
version = "0.1.0"
description = "AI Agent that searches the DevOps Exercises GitHub repo using MinSearch + Streamlit."
readme = "README.md"
requires-python = ">=3.9,<3.13"

dependencies = [
    "streamlit>=1.36.0",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "minsearch>=0.0.5",
    "sentence-transformers>=3.0.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1"
]

[tool.uv.workspace]
members = [
    "application",
    "application/application",
]

